--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         <p>&copy; 2025 Charlie X. All rights reserved.</p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/liquid/liquid.js"></script>
 </body>
 </html>
